@@ -26,7 +26,6 @@ struct umwsu_scan {
   enum umwsu_scan_flags flags;
   GThreadPool *thread_pool;  
   GArray *callbacks;
-  struct alert *alert;
 };
 
 static void scan_entry_thread(gpointer data, gpointer user_data);
@@ -54,8 +53,7 @@ struct umwsu_scan *umwsu_scan_new(struct umwsu *umwsu_handle, const char *path, 
 
   scan->callbacks = g_array_new(FALSE, FALSE, sizeof(struct callback_entry));
 
-  scan->alert = alert_new(scan->flags & UMWSU_SCAN_THREADED);
-  umwsu_scan_add_callback(scan, alert_callback, scan->alert);
+  umwsu_scan_add_callback(scan, alert_callback, NULL);
 
   return scan;
 }
@@ -215,18 +213,17 @@ enum umwsu_status umwsu_scan_run(struct umwsu_scan *scan)
   return UMWSU_EINVAL;
 }
 
+void umwsu_scan_finish(struct umwsu_scan *scan)
+{
+  if (scan->thread_pool != NULL)
+    g_thread_pool_free(scan->thread_pool, FALSE, TRUE);
+}
+
 void umwsu_scan_free(struct umwsu_scan *scan)
 {
   free((char *)scan->path);
 
-  if (scan->thread_pool != NULL)
-    g_thread_pool_free(scan->thread_pool, FALSE, TRUE);
-
   g_array_free(scan->callbacks, TRUE);
-
-  alert_send(scan->alert);
-  alert_free(scan->alert);
 
   free(scan);
 }
-
